xee-xpath/src/interpreter/snapshots/xee_xpath__interpreter__ir_interpret__tests__absent_context.snap
---
source: xee-xpath/src/interpreter/ir_interpret.rs
expression: "run(\".\")"
---
Err(
    SpannedComponentAbsentInDynamicContext {
        src: ".",
        span: SourceSpan {
            offset: SourceOffset(
                0,
            ),
            length: SourceOffset(
                1,
            ),
        },
    },
)
