xee-xpath/src/interpreter/snapshots/xee_xpath__interpreter__ir_interpret__tests__absent_context_with_operation.snap
---
source: xee-xpath/src/interpreter/ir_interpret.rs
expression: "run(\". + 1\")"
---
Err(
    SpannedType {
        src: ". + 1",
        span: SourceSpan {
            offset: SourceOffset(
                0,
            ),
            length: SourceOffset(
                5,
            ),
        },
    },
)
