xee-xpath/src/interpreter/snapshots/xee_xpath__interpreter__ir_interpret__tests__arith_empty_sequence_right.snap
---
source: xee-xpath/src/interpreter/ir_interpret.rs
expression: "run(\"1 + ()\")"
---
Ok(
    Empty,
)
