xee-xpath/src/interpreter/snapshots/xee_xpath__interpreter__ir_interpret__tests__atomize.snap
---
source: xee-xpath/src/interpreter/ir_interpret.rs
expression: "run(\"(1) eq (1)\")"
---
Ok(
    Atomic(
        Boolean(
            true,
        ),
    ),
)
