xee-xpath/src/interpreter/snapshots/xee_xpath__interpreter__ir_interpret__tests__atomize_xml_attribute_eq_false.snap
---
source: xee-xpath/src/interpreter/ir_interpret.rs
expression: "run_xml(r#\"<doc><a f=\"FOO\"/><b f=\"BAR\"/></doc>\"#, \"doc/a/@f eq doc/b/@f\")"
---
Ok(
    Atomic(
        Boolean(
            false,
        ),
    ),
)
