xee-xpath/src/interpreter/snapshots/xee_xpath__interpreter__ir_interpret__tests__atomize_xml_attribute_present.snap
---
source: xee-xpath/src/interpreter/ir_interpret.rs
expression: "run_xml(r#\"<doc><a f=\"FOO\"/></doc>\"#, \"doc/a/@f eq 'FOO'\")"
---
Ok(
    [
        Atomic(
            Boolean(
                true,
            ),
        ),
    ],
)
