xee-xpath/src/interpreter/snapshots/xee_xpath__interpreter__ir_interpret__tests__atomize_xml_eq_false.snap
---
source: xee-xpath/src/interpreter/ir_interpret.rs
expression: "run_xml(r#\"<doc><a>A</a><b>B</b></doc>\"#, \"doc/a eq doc/b\")"
---
Ok(
    Sequence {
        stack_value: Atomic(
            Boolean(
                false,
            ),
        ),
    },
)
